# make-emulator

./: CMakeLists.txt  main.cpp
MyMakeFile/: CMakeLists.txt  makefile.cpp  makefile.h
makefiles/: makefile.failP1  makefile.ok1
